# gradio_molecule3d

./: .gitignore  DEPLOYMENT_GUIDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
backend/gradio_molecule3d/: molecule3d.py  molecule3d.pyi
backend/gradio_molecule3d/templates/component/: index.js  style.css
demo/: space.py
frontend/: package-lock.json  package.json
frontend/shared/: MolecularViewer.svelte
